--- a/pom.xml
+++ b/pom.xml
@@ -55,5 +55,10 @@
         </plugins>
     </build>
 
-
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 </project>
